Update dependencies and add go.sum
